<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_nuevo"
        android:showAsAction="ifRoom|withText"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/menu_nuevo"/>
    <item
        android:id="@+id/menu_habilitar_joystick"
        android:showAsAction="ifRoom|withText"
        android:icon="@drawable/joystick2"
        android:title="@string/mostrar_joystick"/>
    <item
        android:id="@+id/menu_preferencias"
        android:showAsAction="ifRoom|withText"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/menu_preferencias"/>
    <item
        android:id="@+id/menu_desconectar"
        android:showAsAction="ifRoom|withText"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:title="@string/menu_desconectar"/>
    <item
        android:id="@+id/menu_acercade"
        android:showAsAction="ifRoom|withText"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/menu_acercade"/>
</menu>